TextField: proper controlled/uncontrolled behavior + deprecated prop removal (#8723)
* TextField: proper controlled/uncontrolled behavior, remove deprecated props

* TextField defaultValue fixes

* Revert ColorPicker workarounds

* Enable noUnusedLocals in utilities

* Make isControlled return only true/false and add tests

--- a/packages/utilities/tsconfig.json
+++ b/packages/utilities/tsconfig.json
@@ -10,6 +10,7 @@
     "experimentalDecorators": true,
     "importHelpers": true,
     "noImplicitAny": true,
+    "noUnusedLocals": true,
     "strictNullChecks": true,
     "forceConsistentCasingInFileNames": true,
     "moduleResolution": "node",
