Re-enable perf tests

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,7 +29,7 @@ steps:
     displayName: build ci
 
   - task: AzureUpload@1
-    displayName: AzureUpload
+    displayName: Upload PR deploy site
     inputs:
       SourcePath: 'apps/pr-deploy-site/dist'
       azureSubscription: 'UI Fabric (bac044cf-49e1-4843-8dda-1ce9662606c8)'
@@ -37,10 +37,9 @@ steps:
       ContainerName: '$web'
       BlobPrefix: 'pr-deploy-site/$(Build.SourceBranch)'
 
-  # Temporarily disable to get a successful master deploy
-  # - script: |
-  #     npm run perf-test
-  #   displayName: perf test
+  - script: |
+      npm run perf-test
+    displayName: perf test
 
   - task: GithubPRComment@0
     displayName: 'Post Perf Results to Github Pull Request'
