Revert "fix peer dep."
This reverts commit f5fcc0ecd3536dc04df846bb3fb723fb8f4bb9ec.

--- a/packages/charting/package.json
+++ b/packages/charting/package.json
@@ -70,7 +70,7 @@
     "tslib": "^1.7.1"
   },
   "peerDependencies": {
-    "react": ">=16.8.0 <17.0.0",
-    "react-dom": ">=16.8.0 <17.0.0"
+    "react": "16.8.6",
+    "react-dom": "16.8.6"
   }
 }
