--- a/packages/codepen-loader/package.json
+++ b/packages/codepen-loader/package.json
@@ -34,7 +34,7 @@
     "babylon": "^7.0.0-beta.47",
     "jscodeshift": "^0.5.0",
     "loader-utils": "^1.1.0",
-    "prettier": "^1.12.1",
+    "prettier": "~1.17.0",
     "recast": "~0.15.0",
     "tslib": "^1.7.1"
   },
