--- a/scripts/package.json
+++ b/scripts/package.json
@@ -45,11 +45,11 @@
     "mustache": "^2.3.0",
     "ngrok": "^3.0.1",
     "node-sass": "^4.5.3",
-    "open": "^0.0.5",
+    "p-queue": "^6.0.2",
     "postcss": "^6.0.9",
     "postcss-loader": "^2.0.9",
     "postcss-modules": "^0.8.0",
-    "prettier": "^1.12.1",
+    "prettier": "~1.17.0",
     "puppeteer": "^1.13.0",
     "raf": "^3.4.0",
     "raw-loader": "^0.5.1",
