Perf Test: Flamegraphs (#9550)
* Port changes from 6.0 to master.

* WIP: working on scenario list

* scenario list go!

* fix shrinkwrap

* scenariolist fix

* hooking it up with perf-test

* Clean up flamegraphs regressed from webpack server to local file conversion. Fix React render consumption caused by use of fragments.

* Add master reference tests. Generate results blob. Add all scenarios from perf-test app.

* Fix master URL.

* Fix shrinkwrap.

* Add path for perf-tests task since it was removed from root config.

* Fix perf-test command.

* Copy perf test results to PR deploy site. Add BaseButtonNew case.

* Tweak output.

* Final cleanup.

* Disable puppeteer timeout.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,8 +38,18 @@ steps:
       BlobPrefix: 'pr-deploy-site/$(Build.SourceBranch)'
 
   - script: |
-      npm run perf-test
-    displayName: perf test
+      npm run just perf-test
+    workingDirectory: apps/perf-test
+    displayName: Perf Test
+
+  - task: AzureUpload@1
+    displayName: Upload Perf Test Result to PR deploy site
+    inputs:
+      SourcePath: 'apps/perf-test/dist'
+      azureSubscription: 'UI Fabric (bac044cf-49e1-4843-8dda-1ce9662606c8)'
+      storage: fabricweb
+      ContainerName: '$web'
+      BlobPrefix: 'pr-deploy-site/$(Build.SourceBranch)/perf-test'
 
   - task: GithubPRComment@0
     displayName: 'Post Perf Results to Github Pull Request'
