New MDL2-theme package (#9555)
* Add new package and have the fluent styles in for starter

* Rename fluent to mdl2

* Remove extra file

* Remove the remainings of the fluent mentions

* Pipe mdl2-theme to fabric-website-resources

* Adjust mdl2 theme to use previous values for colors, depth and type ramp

* Checkbox and Breadcrumb done

* Callout, ChoiGroup, Label, Link, Slider styles in

* ContextualMenu styles mdl2

* SpinButton, Toogle, Rating MDL2 styles

* Remove Rating

* TextField, FacePile, Modal, CommandBar MDL2 styles

* Buttons MDL2 styles

* All kind of pickers MDL2 styles

* ColorPicker, Dialog, HoverCard, Panel, TeachingBubble MDL2 styles

* ComboBox MDL2 styles

* Dropdown MDL2 styles

* DetailsList and GroupedList MDL2 styles

* Pivot MDL2 styles

* Persona MDL2 styles

* MessageBar MDL2 styles

* Cleanup style files

* Run rush update

* Rush change log

* Fix a palette color

* Rename to something else

* Rename Back

* Change name to acronym

* Rename files

* Rush change log

* Change name to fix casing

* Chnage back by adding 2

* Update tupe on change log

* Update shrinkwrap

* Change log for OUFR

--- a/apps/fabric-website-resources/package.json
+++ b/apps/fabric-website-resources/package.json
@@ -64,6 +64,7 @@
     "@uifabric/example-app-base": "^7.1.1",
     "@uifabric/fluent-theme": "^7.0.2",
     "@uifabric/icons": "^7.0.2",
+    "@uifabric/mdl2-theme": "^0.1.0",
     "@uifabric/merge-styles": "^7.0.2",
     "@uifabric/set-version": "^7.0.0",
     "@uifabric/styling": "^7.0.2",
