Add schedule and custom name to the release pipeline

--- a/azure-pipelines.release.yml
+++ b/azure-pipelines.release.yml
@@ -1,11 +1,24 @@
 pr: none
 trigger: none
 
+# Customize build number to include major version
+# Example: v7_20190626.1
+name: 'v7_$(Rev:.r)'
+
 variables:
   - group: 'Github and NPM secrets'
 
 pool:
   vmImage: 'Ubuntu 16.04'
+
+schedules:
+# minute 0, hour 12 in UTC (5am in UTC+7), any day of month, any month, days 1-5 of week (M-F)
+# https://docs.microsoft.com/en-us/azure/devops/pipelines/build/triggers?tabs=yaml&view=azure-devops#supported-cron-syntax
+- cron: '0 12 * * 1-5'
+  displayName: 'Daily release (M-F at 5am)' # will be 4am when DST ends unless trigger is updated
+  branches:
+    include:
+      - master
 
 steps:
   - task: NodeTool@0
