Polyfill - places react-app-polyfill everywhere that generates apps inside UI Fabric repo (#9622)
* update package.json to include react-app-polyfill and webpack config to use it as well

* making sure the prepend works against object styled entrypoint

* prevent prepending polyfill for UMD and Var targets

* change file

--- a/apps/server-rendered-app/package.json
+++ b/apps/server-rendered-app/package.json
@@ -32,6 +32,7 @@
     "es6-promise": "^4.1.0",
     "office-ui-fabric-react": "^7.6.2",
     "react": "16.8.6",
+    "react-app-polyfill": "~1.0.1",
     "react-dom": "16.8.6",
     "tslib": "^1.7.1"
   }
