--- a/apps/fabric-website-resources/package.json
+++ b/apps/fabric-website-resources/package.json
@@ -50,6 +50,7 @@
     "office-ui-fabric-core": "^10.0.0",
     "office-ui-fabric-react": "^7.6.2",
     "react": "16.8.6",
+    "react-app-polyfill": "~1.0.1",
     "react-dom": "16.8.6",
     "react-highlight": "0.10.0",
     "react-test-renderer": "^16.3.0",
