--- a/apps/todo-app/package.json
+++ b/apps/todo-app/package.json
@@ -26,6 +26,7 @@
     "immutability-helper": "~2.8.1",
     "office-ui-fabric-react": "^7.6.2",
     "react": "16.8.6",
+    "react-app-polyfill": "~1.0.1",
     "react-dom": "16.8.6",
     "typescript": "3.5.1",
     "tslib": "^1.7.1"
