--- a/packages/charting/package.json
+++ b/packages/charting/package.json
@@ -43,6 +43,7 @@
     "enzyme-adapter-react-16": "^1.2.0",
     "es6-weak-map": "^2.0.2",
     "react": "16.8.6",
+    "react-app-polyfill": "~1.0.1",
     "react-dom": "16.8.6",
     "react-highlight": "0.10.0",
     "react-test-renderer": "^16.3.0",
