--- a/packages/example-app-base/package.json
+++ b/packages/example-app-base/package.json
@@ -32,6 +32,7 @@
     "es6-promise": "^4.1.0",
     "es6-weak-map": "^2.0.2",
     "react": "16.8.6",
+    "react-app-polyfill": "~1.0.1",
     "react-dom": "16.8.6",
     "@uifabric/build": "^7.0.0"
   },
