--- a/packages/experiments/package.json
+++ b/packages/experiments/package.json
@@ -44,6 +44,7 @@
     "enzyme-adapter-react-16": "^1.2.0",
     "es6-weak-map": "^2.0.2",
     "react": "16.8.6",
+    "react-app-polyfill": "~1.0.1",
     "react-dom": "16.8.6",
     "react-highlight": "0.10.0",
     "react-hooks-testing-library": "^0.5.0",
