--- a/packages/file-type-icons/package.json
+++ b/packages/file-type-icons/package.json
@@ -26,6 +26,7 @@
     "@uifabric/prettier-rules": "^7.0.2",
     "@uifabric/tslint-rules": "^7.0.2",
     "react": "16.8.6",
+    "react-app-polyfill": "~1.0.1",
     "react-dom": "16.8.6",
     "@uifabric/build": "^7.0.0"
   },
