--- a/packages/foundation/package.json
+++ b/packages/foundation/package.json
@@ -36,6 +36,7 @@
     "enzyme": "~3.9.0",
     "enzyme-adapter-react-16": "^1.2.0",
     "react": "16.8.6",
+    "react-app-polyfill": "~1.0.1",
     "react-dom": "16.8.6",
     "react-hooks-testing-library": "^0.5.0",
     "react-test-renderer": "^16.3.0",
