--- a/packages/office-ui-fabric-react/package.json
+++ b/packages/office-ui-fabric-react/package.json
@@ -59,6 +59,7 @@
     "jest-snapshot": "24.1.0",
     "office-ui-fabric-core": "^10.0.0",
     "react": "16.8.6",
+    "react-app-polyfill": "~1.0.1",
     "react-dom": "16.8.6",
     "react-highlight": "0.10.0",
     "react-test-renderer": "^16.3.0",
