--- a/packages/styling/package.json
+++ b/packages/styling/package.json
@@ -29,6 +29,7 @@
     "es6-map": "^0.1.5",
     "es6-weak-map": "^2.0.2",
     "react": "16.8.6",
+    "react-app-polyfill": "~1.0.1",
     "react-dom": "16.8.6",
     "@uifabric/build": "^7.0.0"
   },
