--- a/packages/utilities/package.json
+++ b/packages/utilities/package.json
@@ -39,6 +39,7 @@
     "enzyme": "~3.9.0",
     "enzyme-adapter-react-16": "^1.2.0",
     "react": "16.8.6",
+    "react-app-polyfill": "~1.0.1",
     "react-dom": "16.8.6",
     "react-test-renderer": "^16.3.0",
     "sinon": "^4.1.3",
