--- a/packages/lists/package.json
+++ b/packages/lists/package.json
@@ -48,6 +48,7 @@
   "dependencies": {
     "@microsoft/load-themed-styles": "^1.7.13",
     "@uifabric/set-version": "^7.0.0",
+    "@uifabric/example-app-base": "^7.1.2",
     "office-ui-fabric-react": "^7.6.2",
     "tslib": "^1.7.1"
   },
