--- a/azure-pipelines.release.yml
+++ b/azure-pipelines.release.yml
@@ -12,13 +12,13 @@ pool:
   vmImage: 'Ubuntu 16.04'
 
 schedules:
-# minute 0, hour 12 in UTC (5am in UTC+7), any day of month, any month, days 1-5 of week (M-F)
-# https://docs.microsoft.com/en-us/azure/devops/pipelines/build/triggers?tabs=yaml&view=azure-devops#supported-cron-syntax
-- cron: '0 12 * * 1-5'
-  displayName: 'Daily release (M-F at 5am)' # will be 4am when DST ends unless trigger is updated
-  branches:
-    include:
-      - master
+  # minute 0, hour 12 in UTC (5am in UTC+7), any day of month, any month, days 1-5 of week (M-F)
+  # https://docs.microsoft.com/en-us/azure/devops/pipelines/build/triggers?tabs=yaml&view=azure-devops#supported-cron-syntax
+  - cron: '0 12 * * 1-5'
+    displayName: 'Daily release (M-F at 5am)' # will be 4am when DST ends unless trigger is updated
+    branches:
+      include:
+        - master
 
 steps:
   - task: NodeTool@0
@@ -79,7 +79,7 @@ steps:
     displayName: 'Publish Artifact: Fabric'
 
   - script: |
-      node ./common/scripts/install-run-rush.js publish -a -p -b master -n $(npmToken) --add-commit-details --set-access-level public
+      npm run publish:beachball -- -b origin/master -n $(npmToken) --access public -y
     displayName: 'Publish Change Requests and Bump Versions'
 
   - script: |
