--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "buildci": "npm run _rushRebuildCi",
     "buildfast": "npm run _rushBuild",
     "code-style": "node common/scripts/install-run-rush.js code-style",
-    "change": "node common/scripts/install-run-rush.js change",
+    "change": "node ./scripts/node_modules/beachball/bin/beachball.js change",
     "rush-update": "node common/scripts/install-run-rush.js update",
     "generate": "npm run rush-update",
     "bundlesize": "cd scripts && npm run bundlesize",
@@ -32,7 +32,8 @@
     "create-component": "node scripts/create-component.js",
     "create-package": "node scripts/create-package.js",
     "create-page": "node scripts/create-page.js",
-    "checkchange": "node common/scripts/install-run-rush.js change -v",
+    "checkchange": "node ./scripts/node_modules/beachball/bin/beachball.js check",
+    "publish:beachball": "node ./scripts/node_modules/beachball/bin/beachball.js publish",
     "update-api": "cd packages/office-ui-fabric-react && npm run update-api",
     "update-snapshots": "cd packages/office-ui-fabric-react && npm run update-snapshots",
     "update-a11y": "cd apps/a11y-tests && npm run update-snapshots",
@@ -53,6 +54,7 @@
       ],
       "*.{js,jsx,json,scss,html,md}": [
         "node ./scripts/lint-staged/prettier",
+        "node ./scripts/lint-staged/auto-convert-change-files",
         "git add"
       ]
     },
