--- a/scripts/package.json
+++ b/scripts/package.json
@@ -22,6 +22,7 @@
     "async": "^2.6.1",
     "autoprefixer": "^7.1.5",
     "babylon": "^7.0.0-beta.47",
+    "beachball": "^1.9.2",
     "bundlesize": "^0.15.2",
     "chalk": "^2.1.0",
     "codecov": "^3.1.0",
