Updating tsx-editor component and dependencies (#9655)
* rewriting editor with hooks

* updating dependencies

* updating with changes needed for transpile

* Update packages/tsx-editor/src/components/Editor.tsx

Co-Authored-By: Elizabeth Craig <ecraig12345@gmail.com>

--- a/packages/tsx-editor/package.json
+++ b/packages/tsx-editor/package.json
@@ -52,12 +52,11 @@
     "monaco-editor": "^0.17.0",
     "monaco-editor-webpack-plugin": "^1.7.0",
     "office-ui-fabric-react": "^7.6.3",
-    "react-monaco-editor": "^0.26.2",
     "tslib": "^1.7.1",
     "typescript": "3.5.1"
   },
   "peerDependencies": {
-    "react": "16.8.6",
-    "react-dom": "16.8.6"
+    "react": ">=16.8.0 <17.0.0",
+    "react-dom": ">=16.8.0 <17.0.0"
   }
 }
