Adds Just build cache (#9794)
* Use resolves for all package paths

* Change files

* no circular deps

* Fix typo and added some skipLibChecks in the right tsconfig.json

* adding a skiplibcheck to make TS happy

* fixes how jest-cli is resolved in debug test

* simplifying codepen-loader jest becuase it really cannot take @uifabric/build as a dep

* had to resort ot using the custom reporter because it needs to silence the ts-jest not finding tsconfig issue

* fixing up the jest serializer resolve issues

* adds the ts-jest config that informs ts-jest where the root of the package is

* adding build cache

* making this windows compatible

* Change files

* update shrinkwrap

* fixes perf-tests

* use npx in scripts to run just-scripts

* special: because of the bin in package.json, cannot use npx just-scripts

* after this, npm run build will invalidate cache like before

* adding a new script that will replace rush rebuild

--- a/packages/prettier-rules/package.json
+++ b/packages/prettier-rules/package.json
@@ -5,8 +5,9 @@
   "main": "prettier.config.js",
   "scripts": {
     "clean": "",
-    "build": "node -v",
-    "code-style": "node ../../scripts/bin/just-scripts.js code-style",
-    "just": "node ../../scripts/bin/just-scripts.js"
+    "build": "just-scripts no-op"
+  },
+  "devDependencies": {
+    "just-scripts": "~0.25.2"
   }
 }
