--- a/packages/codepen-loader/package.json
+++ b/packages/codepen-loader/package.json
@@ -13,6 +13,7 @@
   "scripts": {
     "build": "npx just-scripts build",
     "clean": "npx just-scripts clean",
+    "rebuild": "npm run clean && npm run build",
     "code-style": "npx just-scripts code-style",
     "just": "npx just-scripts",
     "start-test": "npx just-scripts jest-watch",
