--- a/packages/tslint-rules/package.json
+++ b/packages/tslint-rules/package.json
@@ -5,12 +5,13 @@
   "main": "tslint.json",
   "scripts": {
     "clean": "",
-    "build": "node -v"
+    "build": "just-scripts no-op"
   },
   "dependencies": {
     "tslint-react": "^3.2.0"
   },
   "devDependencies": {
-    "@uifabric/prettier-rules": "^7.0.2"
+    "@uifabric/prettier-rules": "^7.0.2",
+    "just-scripts": "~0.25.2"
   }
 }
