Get rid of npx inside the majority of package.jsons to speed up the build runs slightly (#9809)
* get rid of npx everywhere

* get rid of npx

* Change files

* fix package.json at the root

--- a/apps/pr-deploy-site/package.json
+++ b/apps/pr-deploy-site/package.json
@@ -4,8 +4,8 @@
   "description": "A site to be deployed as a static site to view what is built during PR",
   "main": "index.js",
   "scripts": {
-    "build": "npx just-scripts build",
-    "just": "npx just-scripts"
+    "build": "just-scripts build",
+    "just": "just-scripts"
   },
   "license": "MIT",
   "dependencies": {
