--- a/apps/fabric-website/package.json
+++ b/apps/fabric-website/package.json
@@ -11,16 +11,16 @@
     "url": "https://github.com/OfficeDev/office-ui-fabric-react"
   },
   "scripts": {
-    "build": "npx just-scripts build",
-    "create-internal-flight-config": "npx just-scripts create-internal-flight-config",
-    "create-public-flight-config": "npx just-scripts create-public-flight-config",
-    "just": "npx just-scripts",
-    "clean": "npx just-scripts clean",
-    "code-style": "npx just-scripts code-style",
-    "start": "npx just-scripts dev",
+    "build": "just-scripts build",
+    "create-internal-flight-config": "just-scripts create-internal-flight-config",
+    "create-public-flight-config": "just-scripts create-public-flight-config",
+    "just": "just-scripts",
+    "clean": "just-scripts clean",
+    "code-style": "just-scripts code-style",
+    "start": "just-scripts dev",
     "production": "npx -n=--max_old_space_size=8192 just-scripts build --production",
     "dogfood": "npx -n=--max_old_space_size=8192 just-scripts build --dogfood",
-    "startuhf": "npx just-scripts dev --webpackConfig webpack.uhf.serve.config.js"
+    "startuhf": "just-scripts dev --webpackConfig webpack.uhf.serve.config.js"
   },
   "license": "MIT",
   "devDependencies": {
