--- a/apps/server-rendered-app/package.json
+++ b/apps/server-rendered-app/package.json
@@ -7,10 +7,10 @@
     "lib/version.js"
   ],
   "scripts": {
-    "build": "npx just-scripts build",
-    "just": "npx just-scripts",
-    "clean": "npx just-scripts clean",
-    "code-style": "npx just-scripts code-style",
+    "build": "just-scripts build",
+    "just": "just-scripts",
+    "clean": "just-scripts clean",
+    "code-style": "just-scripts code-style",
     "start": "node ./server/index.js"
   },
   "devDependencies": {
