--- a/packages/azure-themes/package.json
+++ b/packages/azure-themes/package.json
@@ -14,9 +14,9 @@
   },
   "license": "MIT",
   "scripts": {
-    "build": "npx just-scripts build",
-    "just": "npx just-scripts",
-    "code-style": "npx just-scripts code-style",
+    "build": "just-scripts build",
+    "just": "just-scripts",
+    "code-style": "just-scripts code-style",
     "clean": "node node_modules/@uifabric/build/just-scripts.js clean"
   },
   "devDependencies": {
