--- a/packages/codepen-loader/package.json
+++ b/packages/codepen-loader/package.json
@@ -11,13 +11,13 @@
   },
   "license": "MIT",
   "scripts": {
-    "build": "npx just-scripts build",
-    "clean": "npx just-scripts clean",
+    "build": "just-scripts build",
+    "clean": "just-scripts clean",
     "rebuild": "npm run clean && npm run build",
-    "code-style": "npx just-scripts code-style",
-    "just": "npx just-scripts",
-    "start-test": "npx just-scripts jest-watch",
-    "update-snapshots": "npx just-scripts jest -u"
+    "code-style": "just-scripts code-style",
+    "just": "just-scripts",
+    "start-test": "just-scripts jest-watch",
+    "update-snapshots": "just-scripts jest -u"
   },
   "devDependencies": {
     "@types/babylon": "^6.16.5",
