--- a/packages/merge-styles/package.json
+++ b/packages/merge-styles/package.json
@@ -14,12 +14,12 @@
   },
   "license": "MIT",
   "scripts": {
-    "build": "npx just-scripts build",
-    "just": "npx just-scripts",
-    "clean": "npx just-scripts clean",
-    "code-style": "npx just-scripts code-style",
-    "start-test": "npx just-scripts jest-watch",
-    "update-api": "npx just-scripts update-api"
+    "build": "just-scripts build",
+    "just": "just-scripts",
+    "clean": "just-scripts clean",
+    "code-style": "just-scripts code-style",
+    "start-test": "just-scripts jest-watch",
+    "update-api": "just-scripts update-api"
   },
   "devDependencies": {
     "@types/jest": "23.0.0",
