--- a/packages/office-ui-fabric-react/package.json
+++ b/packages/office-ui-fabric-react/package.json
@@ -17,15 +17,15 @@
   },
   "license": "MIT",
   "scripts": {
-    "build": "npx just-scripts build",
-    "just": "npx just-scripts",
-    "clean": "npx just-scripts clean",
-    "code-style": "npx just-scripts code-style",
+    "build": "just-scripts build",
+    "just": "just-scripts",
+    "clean": "just-scripts clean",
+    "code-style": "just-scripts code-style",
     "start": "cd ../../apps/fabric-website-resources && npm start",
-    "start-test": "npx just-scripts jest-watch",
+    "start-test": "just-scripts jest-watch",
     "update-sass-theme-files": "node ./scripts/generateDefaultThemeSassFiles.js",
-    "update-snapshots": "npx just-scripts jest -u",
-    "update-api": "npx just-scripts update-api",
+    "update-snapshots": "just-scripts jest -u",
+    "update-api": "just-scripts update-api",
     "codepen": "node ../../scripts/local-codepen.js"
   },
   "devDependencies": {
