--- a/packages/set-version/package.json
+++ b/packages/set-version/package.json
@@ -14,9 +14,9 @@
   },
   "license": "MIT",
   "scripts": {
-    "build": "npx just-scripts build",
-    "code-style": "npx just-scripts code-style",
-    "just": "npx just-scripts"
+    "build": "just-scripts build",
+    "code-style": "just-scripts code-style",
+    "just": "just-scripts"
   },
   "devDependencies": {
     "@types/jest": "23.0.0",
