--- a/packages/styling/package.json
+++ b/packages/styling/package.json
@@ -12,13 +12,13 @@
   "sideEffects": true,
   "typings": "lib/index.d.ts",
   "scripts": {
-    "build": "npx just-scripts build",
-    "just": "npx just-scripts",
-    "clean": "npx just-scripts clean",
-    "code-style": "npx just-scripts code-style",
-    "start-test": "npx just-scripts jest-watch",
-    "update-api": "npx just-scripts update-api",
-    "update-snapshots": "npx just-scripts jest -u"
+    "build": "just-scripts build",
+    "just": "just-scripts",
+    "clean": "just-scripts clean",
+    "code-style": "just-scripts code-style",
+    "start-test": "just-scripts jest-watch",
+    "update-api": "just-scripts update-api",
+    "update-snapshots": "just-scripts jest -u"
   },
   "devDependencies": {
     "@types/jest": "23.0.0",
