--- a/packages/theme-samples/package.json
+++ b/packages/theme-samples/package.json
@@ -14,10 +14,10 @@
   },
   "license": "MIT",
   "scripts": {
-    "build": "npx just-scripts build",
-    "just": "npx just-scripts",
-    "code-style": "npx just-scripts code-style",
-    "clean": "npx just-scripts clean"
+    "build": "just-scripts build",
+    "just": "just-scripts",
+    "code-style": "just-scripts code-style",
+    "clean": "just-scripts clean"
   },
   "devDependencies": {
     "@types/jest": "23.0.0",
