--- a/packages/webpack-utils/package.json
+++ b/packages/webpack-utils/package.json
@@ -8,11 +8,11 @@
   },
   "license": "MIT",
   "scripts": {
-    "build": "npx just-scripts build",
-    "code-style": "npx just-scripts code-style",
-    "clean": "npx just-scripts clean",
+    "build": "just-scripts build",
+    "code-style": "just-scripts code-style",
+    "clean": "just-scripts clean",
     "start": "node ../../scripts/node_modules/typescript/bin/tsc -w --outDir lib -m commonjs -t es5",
-    "just": "npx just-scripts"
+    "just": "just-scripts"
   },
   "devDependencies": {
     "@types/jest": "23.0.0",
