Adding @types/react and @types/react-dom to package.json that have peer dependencies on react and react-dom (#9798)
* Adding @types/react and @types/react-dom to package.json that have peer dependencies on react and react-dom.

* Change files

--- a/packages/lists/package.json
+++ b/packages/lists/package.json
@@ -54,6 +54,8 @@
     "tslib": "^1.7.1"
   },
   "peerDependencies": {
+    "@types/react": ">=16.8.0 <17.0.0",
+    "@types/react-dom": ">=16.8.0 <17.0.0",
     "react": ">=16.8.0 <17.0.0",
     "react-dom": ">=16.8.0 <17.0.0"
   }
