--- a/packages/example-app-base/package.json
+++ b/packages/example-app-base/package.json
@@ -37,6 +37,8 @@
     "@uifabric/build": "^7.0.0"
   },
   "peerDependencies": {
+    "@types/react": ">=16.8.0 <17.0.0",
+    "@types/react-dom": ">=16.8.0 <17.0.0",
     "react": ">=16.8.0 <17.0.0",
     "react-dom": ">=16.8.0 <17.0.0"
   },
