--- a/packages/tsx-editor/package.json
+++ b/packages/tsx-editor/package.json
@@ -56,6 +56,8 @@
     "typescript": "3.5.1"
   },
   "peerDependencies": {
+    "@types/react": ">=16.8.0 <17.0.0",
+    "@types/react-dom": ">=16.8.0 <17.0.0",
     "react": ">=16.8.0 <17.0.0",
     "react-dom": ">=16.8.0 <17.0.0"
   }
