--- a/scripts/package.json
+++ b/scripts/package.json
@@ -17,6 +17,7 @@
     "@microsoft/api-extractor": "7.1.6",
     "@microsoft/load-themed-styles": "^1.7.13",
     "@microsoft/loader-load-themed-styles": "^1.6.0",
+    "@octokit/rest": "^16.28.2",
     "@uifabric/codepen-loader": "^7.0.5",
     "@uifabric/prettier-rules": "^7.0.3",
     "async": "^2.6.1",
@@ -32,7 +33,6 @@
     "find-free-port": "~2.0.0",
     "fork-ts-checker-webpack-plugin": "^0.4.1",
     "fs-extra": "^7.0.1",
-    "github": "^7.0.0",
     "glob": "^7.1.2",
     "gzip-size": "^3.0.0",
     "jest": "24.1.0",
@@ -69,7 +69,7 @@
     "webpack-cli": "3.2.3",
     "webpack-dev-server": "3.1.14",
     "webpack-notifier": "^1.6.0",
-    "yargs": "^6.5.0"
+    "yargs": "^13.2.4"
   },
   "bundlesize": [
     {
