Introduces Lerna + Yarn Workspace - replaces Rush for monorepo management (#9827)
With this, we are switching the master branch to Lerna + Yarn. The Build Commands wiki will be updated to match yarn instructions and the a new Wiki page that documents the old commands will be retained for 6.x developers.

--- a/azure-pipelines.release.yml
+++ b/azure-pipelines.release.yml
@@ -33,8 +33,8 @@ steps:
     displayName: Authenticate git for pushes
 
   - script: |
-      node common/scripts/install-run-rush.js install --bypass-policy
-    displayName: rush install
+      yarn
+    displayName: yarn
 
   # TODO: disable this step until a proper fix to this is found
   #       root cause: this step is generating a set of changes that are not checked in and not accounted for in the change files
@@ -43,8 +43,8 @@ steps:
   #   displayName: npm run generate-version-files
 
   - script: |
-      node common/scripts/install-run-rush.js build --production --verbose
-    displayName: rush build (Create production build)
+      yarn build --production
+    displayName: yarn build (Create production build)
 
   - script: |
       echo Making $(Build.ArtifactStagingDirectory)/api &&
