--- a/packages/prettier-rules/package.json
+++ b/packages/prettier-rules/package.json
@@ -2,12 +2,5 @@
   "name": "@uifabric/prettier-rules",
   "version": "7.0.3",
   "description": "Shared Prettier rules for UI Fabric projects",
-  "main": "prettier.config.js",
-  "scripts": {
-    "clean": "",
-    "build": "just-scripts no-op"
-  },
-  "devDependencies": {
-    "just-scripts": "~0.25.2"
-  }
+  "main": "prettier.config.js"
 }
