--- a/packages/tslint-rules/package.json
+++ b/packages/tslint-rules/package.json
@@ -3,15 +3,10 @@
   "version": "7.0.3",
   "description": "Shared TSLint rules for UI Fabric projects",
   "main": "tslint.json",
-  "scripts": {
-    "clean": "",
-    "build": "just-scripts no-op"
-  },
   "dependencies": {
     "tslint-react": "^3.2.0"
   },
   "devDependencies": {
-    "@uifabric/prettier-rules": "^7.0.3",
-    "just-scripts": "~0.25.2"
+    "@uifabric/prettier-rules": "^7.0.3"
   }
 }
