--- a/package.json
+++ b/package.json
@@ -8,43 +8,40 @@
     "url": "https://github.com/OfficeDev/office-ui-fabric-react"
   },
   "scripts": {
-    "_invalidateCache": "node ./scripts/invalidate-just-cache.js",
-    "_rushInstall": "node common/scripts/install-run-rush.js install --purge",
-    "_rushBuild": "node common/scripts/install-run-rush.js build",
-    "_rushBuildToFabricResources": "node common/scripts/install-run-rush.js build --to @uifabric/fabric-website-resources",
-    "_rushRebuild": "npm run _invalidateCache && node common/scripts/install-run-rush.js rebuild --production --verbose --lint",
-    "_rushRebuildCi": "npm run _invalidateCache && node common/scripts/install-run-rush.js rebuild --verbose --lint",
-    "_rushRebuildFast": "npm run _invalidateCache && node common/scripts/install-run-rush.js rebuild",
-    "postinstall": "npm run _rushInstall && npm run _rushBuildToFabricResources -- --npm-install-mode",
-    "test": "npm run _rushBuild",
+    "preinstall": "node ./scripts/use-yarn-please.js",
+    "postinstall": "node ./scripts/postinstall.js",
+    "buildto": "node ./scripts/monorepo/buildTo.js",
+    "builddemo": "node ./scripts/monorepo/buildTo.js fabric-website-resources --min",
     "vrtest": "cd apps && cd vr-tests && npm run screener",
     "a11ytest": "cd apps && cd a11y-tests && npm run test",
     "start": "cd apps && cd fabric-website-resources && npm start",
     "start-exp": "cd packages && cd experiments && npm start",
-    "rebuild": "npm run _rushRebuildFast",
-    "build": "npm run _rushRebuild",
-    "buildci": "npm run _rushRebuildCi",
-    "buildfast": "npm run _rushBuild",
-    "code-style": "node common/scripts/install-run-rush.js code-style",
-    "change": "node ./scripts/node_modules/beachball/bin/beachball.js change",
-    "rush-update": "node common/scripts/install-run-rush.js update",
-    "generate": "npm run rush-update",
+    "build": "lerna run build --stream -- --production --lint",
+    "buildci": "lerna run build --stream -- --lint",
+    "rebuild": "node ./scripts/invalidate-just-cache.js && npx lerna build --stream",
+    "buildfast": "lerna run build --min",
+    "code-style": "lerna run code-style --stream",
+    "change": "beachball change",
     "bundlesize": "cd scripts && npm run bundlesize",
-    "bundlesizecollect": "cd scripts && npx just-scripts bundle-size-collect",
+    "bundlesizecollect": "cd scripts && just-scripts bundle-size-collect",
     "create-component": "node scripts/create-component.js",
     "create-package": "node scripts/create-package.js",
     "create-page": "node scripts/create-page.js",
-    "checkchange": "node ./scripts/node_modules/beachball/bin/beachball.js check",
-    "publish:beachball": "node ./scripts/node_modules/beachball/bin/beachball.js publish",
+    "checkchange": "beachball check",
+    "publish:beachball": "beachball publish",
     "update-api": "cd packages/office-ui-fabric-react && npm run update-api",
     "update-snapshots": "cd packages/office-ui-fabric-react && npm run update-snapshots",
     "update-a11y": "cd apps/a11y-tests && npm run update-snapshots",
-    "check-for-changed-files": "cd scripts && npx just-scripts check-for-modified-files",
+    "check-for-changed-files": "cd scripts && just-scripts check-for-modified-files",
     "prettier": "node scripts/prettier.js",
-    "generate-version-files": "cd scripts && npx just-scripts generate-version-files",
+    "generate-version-files": "cd scripts && just-scripts generate-version-files",
     "codepen": "cd packages/office-ui-fabric-react && node ../../scripts/local-codepen.js",
-    "precommit": "node scripts/node_modules/lint-staged/index.js",
-    "dom-test": "cd apps/dom-tests && npx just-scripts jest-dom-with-webpack"
+    "dom-test": "cd apps/dom-tests && just-scripts jest-dom-with-webpack"
+  },
+  "devDependencies": {
+    "beachball": "^1.9.2",
+    "lerna": "^3.15.0",
+    "lint-staged": "^7.0.5"
   },
   "license": "MIT",
   "lint-staged": {
@@ -66,6 +63,13 @@
       "**/CHANGELOG.*",
       "**/*.api.md",
       "**/_*.scss"
+    ]
+  },
+  "workspaces": {
+    "packages": [
+      "apps/*",
+      "packages/*",
+      "scripts"
     ]
   }
 }
