--- a/packages/mdl2-theme/tsconfig.json
+++ b/packages/mdl2-theme/tsconfig.json
@@ -13,6 +13,7 @@
     "forceConsistentCasingInFileNames": true,
     "strictNullChecks": true,
     "noImplicitAny": true,
+    "skipLibCheck": true,
     "moduleResolution": "node",
     "preserveConstEnums": true,
     "skipLibCheck": true,
