adds generate-package-manifest task, update just-task and other post lerna world fun (#9895)
* adds generate-package-manifest task

* it would help to spell things correctly

* update just-task dep and the pull request template

--- a/.gitignore
+++ b/.gitignore
@@ -126,3 +126,6 @@ apps/fabric-website/flights/
 # Rush files - since we are moving away from it
 /common
 rush.json
+
+# package manifest
+/package-manifest.json
