--- a/azure-pipelines.release.yml
+++ b/azure-pipelines.release.yml
@@ -120,3 +120,16 @@ steps:
       artifactName: 'fabric-website-resources'
       publishLocation: 'Container'
     displayName: 'Publish Artifact: Fabric Website Resources'
+
+  - script: |
+      yarn workspace @uifabric/build just generate-package-manifest
+    displayName: 'Generates a package manifest'
+
+  - task: AzureUpload@1
+    displayName: Upload Package Manifest
+    inputs:
+      SourcePath: 'package-manifest.json'
+      azureSubscription: 'UI Fabric (bac044cf-49e1-4843-8dda-1ce9662606c8)'
+      storage: fabricweb
+      ContainerName: 'fabric'
+      BlobPrefix: 'package-manifest/latest'
