--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "create-component": "node scripts/create-component.js",
     "create-package": "node scripts/create-package.js",
     "create-page": "node scripts/create-page.js",
-    "checkchange": "beachball check",
+    "checkchange": "beachball check --changehint \"Run 'yarn change' to generate a change file\"",
     "publish:beachball": "beachball publish",
     "update-api": "cd packages/office-ui-fabric-react && npm run update-api",
     "update-snapshots": "cd packages/office-ui-fabric-react && npm run update-snapshots",
@@ -39,7 +39,7 @@
     "dom-test": "cd apps/dom-tests && just-scripts jest-dom-with-webpack"
   },
   "devDependencies": {
-    "beachball": "^1.10.2",
+    "beachball": "^1.11.0",
     "lerna": "^3.15.0",
     "lint-staged": "^7.0.5"
   },
@@ -70,6 +70,11 @@
       "apps/*",
       "packages/*",
       "scripts"
+    ]
+  },
+  "beachball": {
+    "disallowedChangeTypes": [
+      "major"
     ]
   }
 }
