Integrated tsx-editor into example card and fabric website (#9769)

--- a/apps/fabric-website/package.json
+++ b/apps/fabric-website/package.json
@@ -55,6 +55,7 @@
     "@uifabric/set-version": "^7.0.1",
     "@uifabric/theme-samples": "^7.0.3",
     "json-loader": "^0.5.7",
+    "monaco-editor-webpack-plugin": "^1.7.0",
     "office-ui-fabric-react": "^7.19.0",
     "tslib": "^1.7.1",
     "whatwg-fetch": "2.0.4"
