--- a/packages/example-app-base/package.json
+++ b/packages/example-app-base/package.json
@@ -46,8 +46,10 @@
     "@microsoft/load-themed-styles": "^1.7.13",
     "@uifabric/fluent-theme": "^7.0.4",
     "@uifabric/set-version": "^7.0.1",
+    "@uifabric/tsx-editor": "^0.1.0",
     "color-check": "0.0.2",
     "markdown-to-jsx": "6.6.1",
+    "monaco-editor-webpack-plugin": "^1.7.0",
     "office-ui-fabric-core": "^10.0.0",
     "office-ui-fabric-react": "^7.19.0",
     "react-custom-scrollbars": "^4.2.1",
