--- a/packages/tsx-editor/package.json
+++ b/packages/tsx-editor/package.json
@@ -27,6 +27,7 @@
     "@types/enzyme": "3.1.13",
     "@types/enzyme-adapter-react-16": "1.0.3",
     "@types/es6-promise": "0.0.32",
+    "@types/node": "^8.10.29",
     "@types/jest": "23.0.0",
     "@types/react": "16.8.11",
     "@types/react-dom": "16.8.4",
