adding a --cached flag for yarn start and build cache for PR/CI pipeline (#10229)
* adding a --cached flag for yarn start and build cache for PR/CI pipeline

* changed console to logger to get timestamp in there

* fixing the webpack resources to not return function

* actually freeze-lockfile

* restore to master pipeline because build cache is SLOWER

--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "scrub": "node ./scripts/scrub.js",
     "vrtest": "cd apps && cd vr-tests && npm run screener",
     "a11ytest": "cd apps && cd a11y-tests && npm run test",
-    "start": "cd apps && cd fabric-website-resources && npm start",
-    "start-exp": "cd packages && cd experiments && npm start",
+    "start": "yarn workspace @uifabric/fabric-website-resources start",
+    "start-exp": "yarn workspace @uifabric/experiments start",
     "build": "lerna run build --stream -- --production --lint",
     "buildci": "lerna run build --stream -- --lint",
     "rebuild": "node ./scripts/invalidate-just-cache.js && npx lerna build --stream",
