--- a/scripts/package.json
+++ b/scripts/package.json
@@ -35,6 +35,7 @@
     "fs-extra": "^7.0.1",
     "glob": "^7.1.2",
     "gzip-size": "^3.0.0",
+    "hard-source-webpack-plugin": "0.13.1",
     "jest": "24.1.0",
     "jest-cli": "24.1.0",
     "jest-environment-jsdom": "24.0.0",
