Fix up readmes and package.json descriptions (#10247)
* Delete changelogs for unpublished packages

* AppDefinition URL fixes

* Fix up readme and package.json descriptions

* Change files

--- a/apps/fabric-website-resources/package.json
+++ b/apps/fabric-website-resources/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@uifabric/fabric-website-resources",
   "version": "7.2.4",
-  "description": "Office UI Fabric React website resources project",
+  "description": "Office UI Fabric React local demo app",
   "main": "lib-commonjs/index.js",
   "module": "lib/index.js",
   "sideEffects": [
