--- a/apps/fabric-website/package.json
+++ b/apps/fabric-website/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@uifabric/fabric-website",
   "version": "7.4.1",
-  "description": "Reusable React components for building experiences for Office 365.",
+  "description": "The official website for the UI Fabric project.",
   "main": "lib-commonjs/index.js",
   "module": "lib/index.js",
   "sideEffects": true,
