--- a/packages/charting/package.json
+++ b/packages/charting/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@uifabric/charting",
   "version": "0.134.1",
-  "description": "Experimental React components for building experiences for Office 365.",
+  "description": "Experimental React charting components for building experiences for Office 365.",
   "main": "lib-commonjs/index.js",
   "module": "lib/index.js",
   "typings": "lib/index.d.ts",
