--- a/packages/example-app-base/package.json
+++ b/packages/example-app-base/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@uifabric/example-app-base",
   "version": "7.6.0",
-  "description": "Office UI Fabric example app base utilities for building example sites.",
+  "description": "UI Fabric components for building documentation sites.",
   "main": "lib-commonjs/index.js",
   "module": "lib/index.js",
   "typings": "lib/index.d.ts",
