--- a/packages/merge-styles/package.json
+++ b/packages/merge-styles/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@uifabric/merge-styles",
   "version": "7.4.0",
-  "description": "Office UI Fabric style loading utilities.",
+  "description": "Style loading utilities.",
   "main": "lib-commonjs/index.js",
   "module": "lib/index.js",
   "sideEffects": [
