--- a/packages/tslint-rules/package.json
+++ b/packages/tslint-rules/package.json
@@ -3,10 +3,18 @@
   "version": "7.0.4",
   "description": "Shared TSLint rules for UI Fabric projects",
   "main": "tslint.json",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/OfficeDev/office-ui-fabric-react"
+  },
+  "license": "MIT",
   "dependencies": {
     "tslint-react": "^3.2.0"
   },
   "devDependencies": {
     "@uifabric/prettier-rules": "^7.0.3"
+  },
+  "peerDependencies": {
+    "tslint": "*"
   }
 }
