--- a/packages/monaco-editor/package.json
+++ b/packages/monaco-editor/package.json
@@ -1,18 +1,30 @@
 {
   "name": "@uifabric/monaco-editor",
   "version": "0.1.1",
+  "description": "Version of monaco-editor with configuration helpers and transformed CSS files",
+  "module": "./lib/monacoBundle.js",
+  "typings": "./esm/vs/editor/editor.api.d.ts",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/OfficeDev/office-ui-fabric-react"
+  },
   "license": "MIT",
-  "main": "index.js",
-  "module": "./lib/esm/vs/editor/editor.main.js",
-  "typings": "./lib/esm/vs/editor/editor.api.d.ts",
   "scripts": {
-    "build": "just-scripts build"
+    "build": "just-scripts build",
+    "clean": "just-scripts clean",
+    "just": "just-scripts"
   },
   "devDependencies": {
-    "@microsoft/load-themed-styles": "^1.7.13",
-    "@microsoft/loader-load-themed-styles": "^1.6.0",
     "@uifabric/build": "^7.0.0",
-    "glob": "^7.1.4",
-    "monaco-editor": "^0.17.0"
+    "glob": "^7.1.2",
+    "monaco-editor": "0.17.1"
+  },
+  "dependencies": {
+    "@microsoft/load-themed-styles": "^1.7.13",
+    "tslib": "^1.7.1"
+  },
+  "optionalPeerDependencies": {
+    "typescript": "*",
+    "webpack": "*"
   }
 }
