--- a/packages/tsx-editor/package.json
+++ b/packages/tsx-editor/package.json
@@ -48,6 +48,7 @@
     "@uifabric/monaco-editor": "^0.3.0",
     "@uifabric/react-hooks": "^7.0.1",
     "office-ui-fabric-react": "^7.55.2",
+    "raw-loader": "^0.5.1",
     "react-syntax-highlighter": "^10.1.3",
     "tslib": "^1.7.1",
     "typescript": "3.5.1"
