Update API doc generation to handle deprecated messages (#10981)
* Update API doc generation to handle deprecated messages

* Change files

* more updates

* Build cleanup

* PR feedback and other updates

* fix paths

* fix build

* Change files

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -184,7 +184,8 @@
       "env": {
         "NODE_ENV": "development"
       },
-      "sourceMaps": true
+      "sourceMaps": true,
+      "console": "integratedTerminal"
     }
   ]
 }
