--- a/packages/api-docs/package.json
+++ b/packages/api-docs/package.json
@@ -2,13 +2,13 @@
   "name": "@uifabric/api-docs",
   "version": "7.0.7",
   "description": "A package that transforms api-extractor .api.json files into page.json files",
-  "main": "lib-commonjs/index.js",
-  "typings": "lib/index.d.ts",
   "repository": {
     "type": "git",
     "url": "https://github.com/OfficeDev/office-ui-fabric-react"
   },
   "license": "MIT",
+  "main": "lib/index.js",
+  "typings": "lib/index.d.ts",
   "scripts": {
     "build": "just-scripts build",
     "just": "just-scripts",
