--- a/packages/api-docs/tsconfig.json
+++ b/packages/api-docs/tsconfig.json
@@ -13,6 +13,7 @@
     "forceConsistentCasingInFileNames": true,
     "strictNullChecks": true,
     "noImplicitAny": true,
+    "noImplicitThis": true,
     "skipLibCheck": true,
     "moduleResolution": "node",
     "preserveConstEnums": true,
