Lint absolute import rule (#11175)
* Convert absolute import to relative

* Update launch.json to target correct lint-imports.js file

* Update lint-imports.js to add errors for package absolute imports

* Change files

* Fixed error message and added same directory check

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -143,8 +143,8 @@
       "name": "Debug lint imports",
       "type": "node",
       "request": "launch",
-      "program": "${workspaceRoot}/scripts/lint-imports.js",
-      "cwd": "${workspaceRoot}/packages/charting/src",
+      "program": "${workspaceRoot}/scripts/tasks/lint-imports.js",
+      "cwd": "${workspaceRoot}/packages/office-ui-fabric-react",
       "stopOnEntry": false,
       "args": ["--name", "TestComponentName"],
       "runtimeExecutable": null,
