Storybook for more packages; yarn start for Fabric is switched to storybook (#11799)
* updates yarn start experience to storybook for packages that have examples

* Change files

* removed some util changes

* adding pr-deploy-site for fabric storybook

* fixed resolve alias and update instructions post install

* Change files

* temporarily adding debug flag to screener to see why things fail

* making sure all builds have the same tools and on the same platform

* fixed space

* get rid of debug flag now that it is working

* updated with master

--- a/packages/office-ui-fabric-react/package.json
+++ b/packages/office-ui-fabric-react/package.json
@@ -18,13 +18,14 @@
   "license": "MIT",
   "scripts": {
     "build": "just-scripts build",
+    "build:site": "just-scripts storybook:build",
     "bundle": "just-scripts bundle",
     "lint": "just-scripts lint",
     "test": "just-scripts test",
     "just": "just-scripts",
     "clean": "just-scripts clean",
     "code-style": "just-scripts code-style",
-    "start": "cd ../../apps/fabric-website-resources && npm start",
+    "start": "just-scripts dev:storybook",
     "start-test": "just-scripts jest-watch",
     "update-sass-theme-files": "node ./scripts/generateDefaultThemeSassFiles.js",
     "update-snapshots": "just-scripts jest -u",
