--- a/apps/pr-deploy-site/package.json
+++ b/apps/pr-deploy-site/package.json
@@ -17,6 +17,7 @@
     "@uifabric/fabric-website-resources": "^7.4.10",
     "@uifabric/fabric-website": "^7.7.12",
     "@uifabric/foundation-scenarios": "^0.102.12",
+    "office-ui-fabric-react": "^7.85.0",
     "perf-test": "^7.0.0",
     "theming-designer": "^7.0.0",
     "todo-app": "^7.0.0"
