--- a/packages/date-time/package.json
+++ b/packages/date-time/package.json
@@ -21,7 +21,7 @@
     "just": "just-scripts",
     "clean": "just-scripts clean",
     "code-style": "just-scripts code-style",
-    "start": "just-scripts dev",
+    "start": "just-scripts dev:storybook",
     "start-test": "just-scripts jest-watch",
     "update-snapshots": "just-scripts jest -u",
     "update-api": "just-scripts update-api"
