--- a/apps/fabric-website-resources/package.json
+++ b/apps/fabric-website-resources/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uifabric/fabric-website-resources",
-  "version": "7.5.1",
+  "version": "7.5.2",
   "description": "Office UI Fabric React local demo app",
   "main": "lib-commonjs/index.js",
   "module": "lib/index.js",
@@ -40,6 +40,7 @@
     "@types/resemblejs": "~1.3.28",
     "@types/sinon": "2.2.2",
     "@types/webpack-env": "1.13.9",
+    "@uifabric/build": "^7.0.0",
     "@uifabric/jest-serializer-merge-styles": "^7.0.8",
     "@uifabric/prettier-rules": "^7.0.4",
     "@uifabric/tslint-rules": "^7.0.5",
@@ -58,8 +59,7 @@
     "react-highlight": "0.10.0",
     "react-test-renderer": "^16.3.0",
     "resemblejs": "~2.2.3",
-    "sinon": "^4.1.3",
-    "@uifabric/build": "^7.0.0"
+    "sinon": "^4.1.3"
   },
   "dependencies": {
     "@microsoft/load-themed-styles": "^1.10.26",
