--- a/apps/fabric-website/package.json
+++ b/apps/fabric-website/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uifabric/fabric-website",
-  "version": "7.8.1",
+  "version": "7.8.2",
   "description": "The official website for the UI Fabric project.",
   "main": "lib-commonjs/index.js",
   "module": "lib/index.js",
@@ -33,8 +33,10 @@
     "@types/react-dom": "16.8.4",
     "@types/resemblejs": "~1.3.28",
     "@types/webpack-env": "1.13.9",
+    "@uifabric/build": "^7.0.0",
     "@uifabric/prettier-rules": "^7.0.4",
     "@uifabric/tslint-rules": "^7.0.5",
+    "@uifabric/tsx-editor": "^0.11.8",
     "es6-promise": "^4.1.0",
     "es6-weak-map": "^2.0.2",
     "highlight.js": "^9.12.0",
@@ -43,9 +45,7 @@
     "react-app-polyfill": "~1.0.1",
     "react-dom": "16.8.6",
     "react-highlight": "0.10.0",
-    "write-file-webpack-plugin": "^4.1.0",
-    "@uifabric/build": "^7.0.0",
-    "@uifabric/tsx-editor": "^0.11.8"
+    "write-file-webpack-plugin": "^4.1.0"
   },
   "dependencies": {
     "@microsoft/load-themed-styles": "^1.10.26",
