--- a/packages/charting/package.json
+++ b/packages/charting/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uifabric/charting",
-  "version": "0.139.8",
+  "version": "0.139.9",
   "description": "Experimental React charting components for building experiences for Office 365.",
   "main": "lib-commonjs/index.js",
   "module": "lib/index.js",
@@ -38,6 +38,7 @@
     "@types/resemblejs": "~1.3.28",
     "@types/sinon": "2.2.2",
     "@types/webpack-env": "1.13.9",
+    "@uifabric/build": "^7.0.0",
     "@uifabric/example-app-base": "^7.11.9",
     "@uifabric/jest-serializer-merge-styles": "^7.0.8",
     "@uifabric/prettier-rules": "^7.0.4",
@@ -50,8 +51,7 @@
     "react-dom": "16.8.6",
     "react-highlight": "0.10.0",
     "react-test-renderer": "^16.3.0",
-    "sinon": "^4.1.3",
-    "@uifabric/build": "^7.0.0"
+    "sinon": "^4.1.3"
   },
   "dependencies": {
     "@microsoft/load-themed-styles": "^1.10.26",
