--- a/packages/example-app-base/package.json
+++ b/packages/example-app-base/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uifabric/example-app-base",
-  "version": "7.11.9",
+  "version": "7.11.10",
   "description": "UI Fabric components for building documentation sites.",
   "main": "lib-commonjs/index.js",
   "module": "lib/index.js",
@@ -26,9 +26,10 @@
     "@types/jest": "23.0.0",
     "@types/markdown-to-jsx": "6.9.0",
     "@types/react": "16.8.11",
-    "@types/react-dom": "16.8.4",
     "@types/react-custom-scrollbars": "^4.0.5",
+    "@types/react-dom": "16.8.4",
     "@types/webpack-env": "1.13.9",
+    "@uifabric/build": "^7.0.0",
     "@uifabric/prettier-rules": "^7.0.4",
     "@uifabric/tslint-rules": "^7.0.5",
     "es6-map": "^0.1.5",
@@ -36,8 +37,7 @@
     "es6-weak-map": "^2.0.2",
     "react": "16.8.6",
     "react-app-polyfill": "~1.0.1",
-    "react-dom": "16.8.6",
-    "@uifabric/build": "^7.0.0"
+    "react-dom": "16.8.6"
   },
   "peerDependencies": {
     "@types/react": ">=16.8.0 <17.0.0",
