--- a/packages/experiments/package.json
+++ b/packages/experiments/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uifabric/experiments",
-  "version": "7.18.21",
+  "version": "7.18.22",
   "description": "Experimental React components for building experiences for Office 365.",
   "main": "lib-commonjs/index.js",
   "module": "lib/index.js",
@@ -39,6 +39,7 @@
     "@types/resemblejs": "~1.3.28",
     "@types/sinon": "2.2.2",
     "@types/webpack-env": "1.13.9",
+    "@uifabric/build": "^7.0.0",
     "@uifabric/example-app-base": "^7.11.9",
     "@uifabric/jest-serializer-merge-styles": "^7.0.8",
     "@uifabric/prettier-rules": "^7.0.4",
@@ -52,8 +53,7 @@
     "react-highlight": "0.10.0",
     "react-hooks-testing-library": "^0.5.0",
     "react-test-renderer": "^16.3.0",
-    "sinon": "^4.1.3",
-    "@uifabric/build": "^7.0.0"
+    "sinon": "^4.1.3"
   },
   "dependencies": {
     "@microsoft/load-themed-styles": "^1.10.26",
