--- a/packages/fluent-theme/package.json
+++ b/packages/fluent-theme/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uifabric/fluent-theme",
-  "version": "7.1.10",
+  "version": "7.1.11",
   "description": "Fluent theming for use with Fabric components.",
   "main": "lib-commonjs/index.js",
   "module": "lib/index.js",
@@ -24,9 +24,9 @@
   },
   "devDependencies": {
     "@types/jest": "23.0.0",
+    "@uifabric/build": "^7.0.0",
     "@uifabric/prettier-rules": "^7.0.4",
-    "@uifabric/tslint-rules": "^7.0.5",
-    "@uifabric/build": "^7.0.0"
+    "@uifabric/tslint-rules": "^7.0.5"
   },
   "dependencies": {
     "@uifabric/merge-styles": "^7.8.4",
