--- a/packages/office-ui-fabric-react/package.json
+++ b/packages/office-ui-fabric-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "office-ui-fabric-react",
-  "version": "7.86.1",
+  "version": "7.87.0",
   "description": "Reusable React components for building experiences for Office 365.",
   "main": "lib-commonjs/index.js",
   "module": "lib/index.js",
@@ -46,12 +46,13 @@
     "@types/resemblejs": "~1.3.28",
     "@types/sinon": "2.2.2",
     "@types/webpack-env": "1.13.9",
+    "@uifabric/build": "^7.0.0",
+    "@uifabric/example-data": "7.0.3",
     "@uifabric/jest-serializer-merge-styles": "^7.0.8",
     "@uifabric/prettier-rules": "^7.0.4",
     "@uifabric/test-utilities": "^7.0.8",
     "@uifabric/tslint-rules": "^7.0.5",
     "@uifabric/webpack-utils": "^7.0.5",
-    "@uifabric/example-data": "7.0.3",
     "enzyme": "~3.9.0",
     "enzyme-adapter-react-16": "^1.2.0",
     "enzyme-to-json": "^3.3.4",
@@ -68,8 +69,7 @@
     "react-highlight": "0.10.0",
     "react-test-renderer": "^16.3.0",
     "resemblejs": "~2.2.3",
-    "sinon": "^4.1.3",
-    "@uifabric/build": "^7.0.0"
+    "sinon": "^4.1.3"
   },
   "dependencies": {
     "@microsoft/load-themed-styles": "^1.10.26",
