--- a/packages/theme-samples/package.json
+++ b/packages/theme-samples/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uifabric/theme-samples",
-  "version": "7.0.11",
+  "version": "7.0.12",
   "description": "Sample themes for use with Fabric components.",
   "main": "lib-commonjs/index.js",
   "module": "lib/index.js",
@@ -24,9 +24,9 @@
   },
   "devDependencies": {
     "@types/jest": "23.0.0",
+    "@uifabric/build": "^7.0.0",
     "@uifabric/prettier-rules": "^7.0.4",
-    "@uifabric/tslint-rules": "^7.0.5",
-    "@uifabric/build": "^7.0.0"
+    "@uifabric/tslint-rules": "^7.0.5"
   },
   "dependencies": {
     "@uifabric/set-version": "^7.0.3",
