--- a/packages/variants/package.json
+++ b/packages/variants/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uifabric/variants",
-  "version": "7.1.1",
+  "version": "7.1.2",
   "description": "Office UI Fabric subtheme generator.",
   "main": "lib-commonjs/index.js",
   "module": "lib/index.js",
@@ -25,9 +25,9 @@
   },
   "devDependencies": {
     "@types/jest": "23.0.0",
+    "@uifabric/build": "^7.0.0",
     "@uifabric/prettier-rules": "^7.0.4",
-    "@uifabric/tslint-rules": "^7.0.5",
-    "@uifabric/build": "^7.0.0"
+    "@uifabric/tslint-rules": "^7.0.5"
   },
   "dependencies": {
     "@uifabric/set-version": "^7.0.3",
