Fixing up build scripts while trialing the import of fluent component library (#11894)
* Adds all of FluentUI /build scripts over

* accommodate the move of storybook configs

* creating a gulpfile based on fluent gulpfile

* Change files

* Update based on red squiggly

* WIP: fixing up the import script to handle more situations towards a working build

* fixing typings in preparation of merge

* adding some stuff to ignore from fluentui world

* adding back test-dependencies scripts from fluent

* adding more gitignore according to fluentui packages

* update enzyme typings

* fix yarn.lock

* fixing up tasks to be able to build

* yarn lock update

* fixing a typing change from upgrading enzyme

* Change files

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# FluentUI code
+*.source.json
+*.info.json
+*.tsbuildinfo
+packages/fluentui/ability-attributes/src/schema.ts
+
 # Windows image file caches
 Thumbs.db
 ehthumbs.db
@@ -47,7 +53,6 @@ lib-es2015
 coverage
 dist
 dist-storybook
-test-dependencies
 screenshots
 
 *.tar.gz
