--- a/scripts/typescript/tsconfig.common.json
+++ b/scripts/typescript/tsconfig.common.json
@@ -1,27 +1,22 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
     "target": "es5",
-    "lib": ["es2015", "dom"],
-    "baseUrl": "../",
-    "paths": {
-      "@fluentui/docs": ["docs"],
-      "@fluentui/e2e": ["e2e"],
-      "@fluentui/internal-tooling": ["build"],
-      "@fluentui/perf": ["perf"],
-      "@fluentui/*": ["packages/*/src"]
-    },
-    "types": ["node", "jest"],
-    "jsx": "react",
-    "importHelpers": true,
-    "isolatedModules": true,
+    "module": "esnext",
     "moduleResolution": "node",
-    "pretty": true,
-    "allowJs": false,
-    "noImplicitReturns": true,
-    "noImplicitThis": false,
-    "noImplicitAny": false,
-    "strictNullChecks": false,
-    "noUnusedLocals": true
+    "lib": ["es2015", "dom"],
+    "jsx": "react",
+    "declaration": true,
+    "declarationMap": true,
+    "sourceMap": true,
+    "outDir": "lib",
+    "strict": true,
+    "noUnusedLocals": true,
+    "noImplicitAny": true,
+    "noImplicitThis": true,
+    "forceConsistentCasingInFileNames": true,
+    "esModuleInterop": true,
+    "skipDefaultLibCheck": true,
+    "skipLibCheck": true,
+    "types": ["node", "jest"]
   }
 }
