--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,5 @@
 {
-  "packages": ["packages/*", "apps/*", "scripts"],
+  "packages": ["packages/*", "apps/*", "scripts", "packages/fluentui/*"],
   "npmClient": "yarn",
   "useWorkspaces": true,
   "version": "0.0.0"
