--- a/scripts/package.json
+++ b/scripts/package.json
@@ -26,7 +26,6 @@
     "@babel/register": "^7.7.7",
     "@babel/standalone": "^7.7.7",
     "@fluentui/eslint-plugin": "^0.44.0",
-    "@jest/reporters": "~24.9.0",
     "@mdx-js/loader": "^1.0.21",
     "@microsoft/api-extractor": "7.7.1",
     "@microsoft/load-themed-styles": "^1.10.26",
@@ -46,7 +45,7 @@
     "@types/gulp-remember": "^0.0.31",
     "@types/gulp-util": "^3.0.34",
     "@types/lodash": "^4.14.149",
-    "@types/jest": "^24.0.19",
+    "@types/jest": "~24.9.0",
     "@types/jest-axe": "^3.2.1",
     "@types/lerna-alias": "^3.0.0",
     "@types/node": "^10.3.2",
@@ -54,8 +53,9 @@
     "@types/webpack-dev-middleware": "^2.0.1",
     "@types/webpack-env": "^1.14.1",
     "@types/webpack-hot-middleware": "^2.16.3",
-    "@typescript-eslint/eslint-plugin": "^2.5.0",
-    "@typescript-eslint/parser": "^2.5.0",
+    "@typescript-eslint/eslint-plugin": "2.8.0",
+    "@typescript-eslint/parser": "2.8.0",
+    "@uifabric/prettier-rules": "^7.0.4",
     "async": "^2.6.1",
     "autoprefixer": "^7.1.5",
     "babel-jest": "^24.5.0",
@@ -69,6 +69,7 @@
     "copy-webpack-plugin": "^4.5.2",
     "css-loader": "^0.28.7",
     "del": "^5.1.0",
+    "doctoc": "^1.3.0",
     "doctrine": "^2.0.0",
     "eslint": "^6.5.1",
     "eslint-config-airbnb": "^17.1.0",
@@ -101,7 +102,9 @@
     "json-loader": "^0.5.7",
     "json-stable-stringify-without-jsonify": "^1.0.1",
     "just-scripts": "~0.34.0",
+    "lerna-alias": "^3.0.3-0",
     "license-webpack-plugin": "^2.1.1",
+    "markdown-table": "^2.0.0",
     "mustache": "^2.3.0",
     "ngrok": "^3.0.1",
     "node-sass": "^4.13.0",
