Making "gulp docs" work (#11929)
* update docs to use correct types

* fixing tsconfig path

* fixing relative imports of the react/package.json from docs

* apparently the eslintplugin is stuck on a specific version (taking on deprecated utils)

* gulp docs works!!

--- a/packages/fluentui/docs/tsconfig.json
+++ b/packages/fluentui/docs/tsconfig.json
@@ -1,32 +1,15 @@
 {
-  "extends": "@uifabric/build/typescript/tsconfig.common",
+  "extends": "../../../scripts/typescript/tsconfig.fluentui",
   "compilerOptions": {
     "module": "esnext",
     "paths": {
-      "@fluentui/*": [
-        "packages/fluentui/*/src"
-      ],
-      "docs/*": [
-        "packages/fluentui/docs/*"
-      ],
-      "src/*": [
-        "packages/fluentui/react/src/*"
-      ],
-      "test/*": [
-        "packages/fluentui/react/test/*"
-      ]
+      "@fluentui/*": ["packages/fluentui/*/src/index"],
+      "docs/*": ["packages/fluentui/docs/*"],
+      "src/*": ["packages/fluentui/react/src/*"],
+      "test/*": ["packages/fluentui/react/test/*"]
     },
-    "typeRoots": [
-      "../types",
-      "../node_modules/@types"
-    ],
-    "types": [
-      "node",
-      "webpack-env",
-      "screener-runner"
-    ]
+    "typeRoots": ["../../../typings", "../node_modules/@types"],
+    "types": ["node", "webpack-env", "screener-runner"]
   },
-  "include": [
-    "./src"
-  ]
+  "include": ["./src"]
 }
