--- a/packages/fluentui/e2e/tsconfig.json
+++ b/packages/fluentui/e2e/tsconfig.json
@@ -1,15 +1,9 @@
 {
-  "extends": "@uifabric/build/typescript/tsconfig.common",
+  "extends": "../../../scripts/typescript/tsconfig.fluentui",
   "compilerOptions": {
     "module": "esnext",
     "allowSyntheticDefaultImports": true,
-    "types": [
-      "node",
-      "jest",
-      "webpack-env"
-    ]
+    "types": ["node", "jest", "webpack-env"]
   },
-  "include": [
-    "."
-  ]
+  "include": ["."]
 }
