--- a/packages/fluentui/ability-attributes/tsconfig.json
+++ b/packages/fluentui/ability-attributes/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "@uifabric/build/typescript/tsconfig.fluentui",
+  "extends": "../../../scripts/typescript/tsconfig.fluentui",
   "compilerOptions": {
     "composite": true,
     "outDir": "dist/dts",
@@ -9,8 +9,5 @@
     "noUnusedParameters": true,
     "strictNullChecks": true
   },
-  "include": [
-    "src",
-    "test"
-  ]
+  "include": ["src", "test"]
 }
