--- a/packages/fluentui/accessibility/tsconfig.json
+++ b/packages/fluentui/accessibility/tsconfig.json
@@ -1,11 +1,8 @@
 {
-  "extends": "@uifabric/build/typescript/tsconfig.fluentui",
+  "extends": "../../../scripts/typescript/tsconfig.fluentui",
   "compilerOptions": {
     "composite": true,
     "outDir": "dist/dts"
   },
-  "include": [
-    "src",
-    "test"
-  ]
+  "include": ["src", "test"]
 }
