--- a/packages/fluentui/code-sandbox/tsconfig.json
+++ b/packages/fluentui/code-sandbox/tsconfig.json
@@ -1,12 +1,10 @@
 {
-  "extends": "@uifabric/build/typescript/tsconfig.fluentui",
+  "extends": "../../../scripts/typescript/tsconfig.fluentui",
   "compilerOptions": {
     "composite": true,
     "outDir": "dist/dts"
   },
-  "include": [
-    "src"
-  ],
+  "include": ["src"],
   "references": [
     {
       "path": "../docs-components"
