--- a/packages/fluentui/eslint-plugin/package.json
+++ b/packages/fluentui/eslint-plugin/package.json
@@ -2,8 +2,8 @@
   "name": "@fluentui/eslint-plugin",
   "version": "0.44.0",
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.5.0",
-    "@typescript-eslint/experimental-utils": "^2.5.0"
+    "@typescript-eslint/eslint-plugin": "2.8.0",
+    "@typescript-eslint/experimental-utils": "2.8.0"
   },
   "files": [
     "rules"
