--- a/packages/fluentui/react-bindings/tsconfig.json
+++ b/packages/fluentui/react-bindings/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "@uifabric/build/typescript/tsconfig.fluentui",
+  "extends": "../../../scripts/typescript/tsconfig.fluentui",
   "compilerOptions": {
     "composite": true,
     "outDir": "dist/dts",
@@ -9,10 +9,7 @@
     "noUnusedParameters": true,
     "strictNullChecks": true
   },
-  "include": [
-    "src",
-    "test"
-  ],
+  "include": ["src", "test"],
   "references": [
     {
       "path": "../accessibility"
