--- a/packages/fluentui/react/tsconfig.json
+++ b/packages/fluentui/react/tsconfig.json
@@ -1,24 +1,15 @@
 {
-  "extends": "@uifabric/build/typescript/tsconfig.fluentui",
+  "extends": "../../../scripts/typescript/tsconfig.fluentui",
   "compilerOptions": {
     "composite": true,
     "outDir": "dist/dts",
     "paths": {
-      "docs/*": [
-        "packages/fluentui/docs/*"
-      ],
-      "src/*": [
-        "packages/fluentui/react/src/*"
-      ],
-      "test/*": [
-        "packages/fluentui/react/test/*"
-      ]
+      "docs/*": ["packages/fluentui/docs/*"],
+      "src/*": ["packages/fluentui/react/src/*"],
+      "test/*": ["packages/fluentui/react/test/*"]
     }
   },
-  "include": [
-    "src",
-    "test"
-  ],
+  "include": ["src", "test"],
   "references": [
     {
       "path": "../accessibility"
