--- a/packages/fluentui/styles/tsconfig.json
+++ b/packages/fluentui/styles/tsconfig.json
@@ -1,12 +1,9 @@
 {
-  "extends": "@uifabric/build/typescript/tsconfig.fluentui",
+  "extends": "../../../scripts/typescript/tsconfig.fluentui",
   "compilerOptions": {
     "composite": true,
     "outDir": "dist/dts"
   },
-  "include": [
-    "src",
-    "test"
-  ],
+  "include": ["src", "test"],
   "references": []
 }
