--- a/scripts/typescript/tsconfig.fluentui.json
+++ b/scripts/typescript/tsconfig.fluentui.json
@@ -3,7 +3,7 @@
     "module": "commonjs",
     "target": "es5",
     "lib": ["es2015", "dom"],
-    "baseUrl": "../../../../",
+    "baseUrl": "../../",
     "paths": {
       "@uifabric/build": ["scripts"],
       "@fluentui/*": ["packages/fluentui/*/src"]
