--- a/scripts/package.json
+++ b/scripts/package.json
@@ -49,6 +49,7 @@
     "@types/jest-axe": "^3.2.1",
     "@types/lerna-alias": "^3.0.0",
     "@types/node": "^10.3.2",
+    "@types/prompts": "^2.0.3",
     "@types/puppeteer": "^1.11.1",
     "@types/webpack-dev-middleware": "^2.0.1",
     "@types/webpack-env": "^1.14.1",
@@ -118,6 +119,7 @@
     "postcss-modules": "^0.8.0",
     "prettier": "~1.19.1",
     "progress": "^2.0.3",
+    "prompts": "^2.3.0",
     "puppeteer": "^1.13.0",
     "raf": "^3.4.0",
     "raw-loader": "^0.5.1",
