Adding a script for releasing FluentUI packages a la fluent-ui-react repo (#11950)
* WIP: FluentUI publish steps

* lerna.json to use correct version; fluentui-publish to separate version and publish steps

* override worspaces inside root package.json

* try lerna publish again

* do not reset git changes after publish

* don't do tag and push yet

* fixed order of the package minimatches in monorepo

* adding git tag and publish (note only for origin/master, not for local dev env)

* get rid of locahost:4873 flag in the yarn scripts

* adding a no-push flag

* addressing PR feedback

--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "postinstall": "node ./scripts/postinstall.js",
     "prettier": "node scripts/prettier.js",
     "rebuild": "node ./scripts/invalidate-just-cache.js && npx lerna build --stream",
+    "release:minor": "yarn workspace @uifabric/build just fluentui:publish:minor",
+    "release:patch": "yarn workspace @uifabric/build just fluentui:publish:patch",
     "scrub": "node ./scripts/scrub.js",
     "start:legacy": "yarn workspace @uifabric/fabric-website-resources start",
     "start": "node scripts/start.js",
