--- a/scripts/package.json
+++ b/scripts/package.json
@@ -39,6 +39,7 @@
     "@storybook/react": "^5.3.8",
     "@types/babel__traverse": "^7.0.4",
     "@types/express": "^4.16.1",
+    "@types/glob": "^7.1.1",
     "@types/gulp": "^4.0.6",
     "@types/gulp-babel": "6.1.29",
     "@types/gulp-cache": "^0.4.4",
